deploy/overlays/local/envida/components/ehrbase-ingress/ehrbase-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: envida-ehrbase-ingress
  namespace: dh-health
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: ehrbase.envida.local.dh.unimaas.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: envida-ehrbase
            port:
              number: 8080
